[gd_scene load_steps=5 format=3 uid="uid://c5dq4uwy70lw2"]

[ext_resource type="Script" uid="uid://bb11vmxnghp5f" path="res://src/scene/main.gd" id="1_48vbg"]
[ext_resource type="Script" uid="uid://dupea25b8qh5t" path="res://addons/apprentice/node/simple_menu.gd" id="1_cei7b"]
[ext_resource type="Script" uid="uid://dubveb6rmljf7" path="res://src/scene/media_file_menu.gd" id="2_g4eit"]
[ext_resource type="PackedScene" uid="uid://cpaju0dw37y55" path="res://src/scene/media_file_container/media_file_container.tscn" id="4_6gqyf"]

[node name="Main" type="Node" node_paths=PackedStringArray("image_size_slider", "image_size_label", "media_container")]
script = ExtResource("1_48vbg")
image_size_slider = NodePath("Control/MarginContainer/VBoxContainer/HBoxContainer/HSlider")
image_size_label = NodePath("Control/MarginContainer/VBoxContainer/HBoxContainer/ImageSizeLabel")
media_container = NodePath("Control/MarginContainer/VBoxContainer/MediaFileContainer")

[node name="Node" type="Node" parent="."]

[node name="MediaFileMenu" type="PopupMenu" parent="Node" node_paths=PackedStringArray("media_file_container")]
submenu_popup_delay = 0.2
script = ExtResource("2_g4eit")
media_file_container = NodePath("../../Control/MarginContainer/VBoxContainer/MediaFileContainer")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="SimpleMenu" type="MenuBar" parent="Control/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
script = ExtResource("1_cei7b")
metadata/_custom_type_script = "uid://dupea25b8qh5t"

[node name="MediaFileContainer" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("4_6gqyf")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "图片大小："

[node name="HSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
min_value = 128.0
max_value = 2048.0
step = 16.0
page = 16.0
value = 128.0
tick_count = 20
ticks_on_borders = true

[node name="ImageSizeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2

[connection signal="drag_ended" from="Control/MarginContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
